2007-11-06  Juanma Barranquero  <lekktu@gmail.com>

	* ido.el (ido-save-history): Write the history file in the current
	filename coding system, and add `coding' file-local variable.

2007-11-06  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el (org-table-formula-substitute-names):
	Remove forgotten temporary debugging code.

2007-11-05  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-wait-for-output): Ignore escape sequences in
	the prompt.

2007-10-05  Chris Moore  <christopher.ian.moore@gmail.com>

	* wdired.el (wdired-use-dired-vertical-movement): Doc fix.

2007-11-05  Simon Josefsson  <simon@josefsson.org>

	* net/tls.el (tls-end-of-info): Doc fix.

2007-11-05  Kenichi Handa  <handa@ni.aist.go.jp>

	* international/utf-7.el (utf-7-imap): New coding system.
	(utf-7-imap-post-read-conversion): New function.
	(utf-7-imap-pre-write-conversion): New function.

2007-11-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* abbrev.el (abbrev--write): Fix up typo.

2007-11-04  Juanma Barranquero  <lekktu@gmail.com>

	* abbrev.el (define-abbrev-table): Doc fix.

2007-11-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* info.el (Info-revert-buffer-function): New func.
	(Info-mode): Arrange to use it for reverting.
	(Info-copy-current-node-name): Add space between filename and nodename.

2007-11-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* abbrev.el (expand-abbrev): Move point back to expansion's end.

2007-11-04  Glenn Morris  <rgm@gnu.org>

	* net/tls.el: Don't require rx when compiling.
	(tls-end-of-info): Rewrite without using rx.
	(open-tls-stream): Use with-current-buffer.

2007-11-04  Riccardo Murri  <riccardo.murri@gmail.com>

	* net/tls.el: Require rx when compiling.
	(tls-end-of-info): New variable.
	(open-tls-stream): Keep reading input until `tls-end-of-info' is
	matched.

2007-11-03  Sean O'Rourke  <seano@cs.ucla.edu>

	* register.el (append-to-register, prepend-to-register):