@@ -1,3 +1,12 @@
+2007-11-06  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/tramp.el (top): Don't autoload `tramp-cache-print'.
+
+	* net/tramp-cache (tramp-cache-print): Move down.
+	(tramp-cache-list-connections): New defun.
+
+	* net/tramp-cmds.el (tramp-cleanup-connection): Use it.
+
 2007-11-06  Juanma Barranquero  <lekktu@gmail.com>
 
 	* ido.el (ido-save-history): Write the history file in the current
